[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/card_default.gd" type="Script" id=1]
[ext_resource path="res://Textures/card_placeholder.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 16.0555, 16 )

[node name="card" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 36.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Mouse" ]

[node name="card_area" type="Area2D" parent="." index="0"]

input_pickable = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Pickable" ]

[node name="shape" type="CollisionShape2D" parent="card_area" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="player_ind" type="Sprite" parent="card_area" index="1"]

[node name="card_holder" type="Sprite" parent="card_area" index="2"]

texture = ExtResource( 2 )

[node name="card_sprite" type="Sprite" parent="card_area/card_holder" index="0"]


